# public/swagger.json
@@ -6,19 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"Health": {
-				"properties": {
-					"msg": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"msg"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
-			"Participant": {
+			"Pick_Participant.Exclude_keyofParticipant.otp-or-id-or-isVerified__": {
 				"properties": {
 					"DOB": {
 						"type": "string",
@@ -33,16 +21,7 @@
 					"firstName": {
 						"type": "string"
 					},
-					"id": {
-						"type": "string"
-					},
-					"isVerified": {
-						"type": "boolean"
-					},
 					"lastName": {
-						"type": "string"
-					},
-					"otp": {
 						"type": "string"
 					},
 					"password": {
@@ -61,9 +40,27 @@
 				"required": [
 					"email",
 					"firstName",
-					"id",
 					"lastName",
 					"password"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Participant.otp-or-id-or-isVerified_": {
+				"$ref": "#/components/schemas/Pick_Participant.Exclude_keyofParticipant.otp-or-id-or-isVerified__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"RegisterParticipantType": {
+				"$ref": "#/components/schemas/Omit_Participant.otp-or-id-or-isVerified_"
+			},
+			"Health": {
+				"properties": {
+					"msg": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"msg"
 				],
 				"type": "object",
 				"additionalProperties": true
@@ -83,6 +80,36 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api/auth/register/participant": {
+			"post": {
+				"operationId": "RegisterParticipant",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterParticipantType"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/health": {
 			"get": {
 				"operationId": "GetHealth",
@@ -111,36 +138,6 @@
 				],
 				"security": [],
 				"parameters": []
-			}
-		},
-		"/api/auth/register/participant": {
-			"post": {
-				"operationId": "RegisterParticipant",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Authentication controller Options"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/Participant"
-							}
-						}
-					}
-				}
 			}
 		}
 	},
